ios/chrome/browser/ui/tab_grid/tab_grid_mediator.h
@@ -14,11 +14,17 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 @protocol GridConsumer;
 @class TabModel;
 
+namespace sessions {
+class TabRestoreService;
+}  // namespace sessions
+
 // Mediates between model layer and tab grid UI layer.
 @interface TabGridMediator : NSObject<GridCommands, GridImageDataSource>
 
 // The source tab model.
 @property(nonatomic, weak) TabModel* tabModel;
+// TabRestoreService holds the recently closed tabs.
+@property(nonatomic, assign) sessions::TabRestoreService* tabRestoreService;
 
 // Initializer with |consumer| as the receiver of model layer updates.
 - (instancetype)initWithConsumer:(id<GridConsumer>)consumer
